--- a/wiki.html
+++ b/wiki.html
@@ -7,7 +7,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link href="includes/styles/wiki.css" rel="stylesheet" />
+    <link href="wiki.css" rel="stylesheet" />
     <link rel="EditURI" type="application/rsd+xml" href="//www.mediawiki.org/w/api.php?action=rsd" />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
@@ -49,7 +49,7 @@
         </div>
         <footer><p>Prepared By: <small>Haileab A Gebrekidan</small></p></footer>
     </div>
-<script src="includes/scripts/wikiAPI.js"></script>
-    
+<script src="wikiAPI.js"></script>
+
 </body>
 </html>
